# ha-sip-voice-assistant

./: .gitignore  INSTALLATION.md  Makefile  README.md  env.example  poetry.toml  pyproject.toml  repository.json  requirements.txt
.github/workflows/: build-addon-images.yml
addon/: Dockerfile  config.yaml  run.sh
app/: __init__.py  config.py
app/ai/: openai_client.py
app/bridge/: __init__.py  call_session.py
app/sip/: __init__.py  audio_bridge.py  rtp_session.py
app/utils/: caller_mapping.py  pin_verification.py
docs/: ADDON_CONFIG.md  TESTING.md  TESTING_ADDON.md
ha_sip_voice_assistant/: Dockerfile  README_TESTING.md  build_and_push.sh  config.yaml  docker_build_with_logs.sh  pyproject.toml  run.sh  test_build.sh  test_multi_arch.sh
ha_sip_voice_assistant/.github/workflows/: build-and-push.yml
ha_sip_voice_assistant/app/: __init__.py  config.py  main.py
ha_sip_voice_assistant/app/ai/: openai_client.py  tool_handler.py
ha_sip_voice_assistant/app/bridge/: audio_adapter.py  call_session.py
ha_sip_voice_assistant/app/homeassistant/: __init__.py  client.py
ha_sip_voice_assistant/app/sip/: audio_bridge.py  client.py  pjsip_adapter.py  pyvoip_adapter.py
ha_sip_voice_assistant/app/utils/: caller_mapping.py  pin_verification.py
ha_sip_voice_assistant/config/: callers_example.yaml  tools_example.yaml
ha_sip_voice_assistant/tests/: test_components.py
tests/: test_application.py  test_components.py  test_run.sh
